v0.4/_sources/dowhy.causal_estimators.rst.txt
dowhy.causal\_estimators package
================================

Submodules
----------

dowhy.causal\_estimators.causalml module
----------------------------------------

.. automodule:: dowhy.causal_estimators.causalml
   :members:
   :undoc-members:
   :show-inheritance:

dowhy.causal\_estimators.econml module
--------------------------------------

.. automodule:: dowhy.causal_estimators.econml
   :members:
   :undoc-members:
   :show-inheritance:

dowhy.causal\_estimators.instrumental\_variable\_estimator module
-----------------------------------------------------------------

.. automodule:: dowhy.causal_estimators.instrumental_variable_estimator
   :members:
   :undoc-members:
   :show-inheritance:

dowhy.causal\_estimators.linear\_regression\_estimator module
-------------------------------------------------------------

.. automodule:: dowhy.causal_estimators.linear_regression_estimator
   :members:
   :undoc-members:
   :show-inheritance:

dowhy.causal\_estimators.propensity\_score\_estimator module
------------------------------------------------------------

.. automodule:: dowhy.causal_estimators.propensity_score_estimator
   :members:
   :undoc-members:
   :show-inheritance:

dowhy.causal\_estimators.propensity\_score\_matching\_estimator module
----------------------------------------------------------------------

.. automodule:: dowhy.causal_estimators.propensity_score_matching_estimator
   :members:
   :undoc-members:
   :show-inheritance:

dowhy.causal\_estimators.propensity\_score\_stratification\_estimator module
----------------------------------------------------------------------------

.. automodule:: dowhy.causal_estimators.propensity_score_stratification_estimator
   :members:
   :undoc-members:
   :show-inheritance:

dowhy.causal\_estimators.propensity\_score\_weighting\_estimator module
-----------------------------------------------------------------------

.. automodule:: dowhy.causal_estimators.propensity_score_weighting_estimator
   :members:
   :undoc-members:
   :show-inheritance:

dowhy.causal\_estimators.regression\_discontinuity\_estimator module
--------------------------------------------------------------------

.. automodule:: dowhy.causal_estimators.regression_discontinuity_estimator
   :members:
   :undoc-members:
   :show-inheritance:


Module contents
---------------

.. automodule:: dowhy.causal_estimators
   :members:
   :undoc-members:
   :show-inheritance:
